# monolith-to-monorepo

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  BUILD  LICENSE  README.md  docker-compose.yml  manage.py  pants.toml  pyproject.toml  setup.cfg
build-support/: autoflake.lockfile  bandit.lockfile  black.lockfile  flake8.lockfile  ipython.lockfile  isort.lockfile  mypy.lockfile  pytest.lockfile  pyupgrade.lockfile
compose/local/django/: Dockerfile  gunicorn.local.conf.py  start
compose/local/django/celery/beat/: start
compose/local/django/proxy/: start
compose/local/files/: motd  zshrc
compose/local/postgres/: BUILD  Dockerfile  init-user-db.sh
compose/production/django/: Dockerfile  entrypoint  gunicorn.conf.py  migrate  start
compose/production/django/celery/beat/: start
compose/production/django/celery/worker/: start
config/: BUILD  __init__.py  urls.py  wsgi.py
config/settings/: __init__.py  utils.py
config/settings/components/: authentication.py  cache.py  celery.py  common.py  email.py  proxy.py  secrets.py  security.py  storage.py  version.py
config/settings/environments/: local.py  production.py  test.py
mtom/: BUILD  celery.py  conftest.py
mtom/api/: apps.py  exception_handlers.py  mixins.py  urls.py
mtom/api/tests/pagination/: test_get_paginated_response.py
mtom/authentication/: apis.py  apps.py  services.py  urls.py
mtom/authentication/tests/apis/: test_user_login.py
mtom/common/: apps.py  services.py
mtom/common/migrations/: 0001_initial.py
mtom/common/tests/models/: test_random_model.py
mtom/common/tests/services/: test_model_update.py
mtom/common/tests/utils/: test_inline_serializer.py
mtom/core/: apps.py
mtom/emails/: admin.py  apps.py  models.py  services.py  tasks.py
mtom/emails/migrations/: 0001_initial.py
mtom/errors/: apis.py  apps.py  services.py  urls.py
mtom/files/: admin.py  apis.py  apps.py  models.py  services.py  urls.py
mtom/files/migrations/: 0001_initial.py  0002_file_uploaded_by.py
mtom/integrations/: apps.py
mtom/integrations/aws/: client.py
mtom/tasks/: apps.py  celery.py  tasks.py
mtom/tasks/management/commands/: setup_periodic_tasks.py
mtom/testing_examples/: admin.py  apps.py
mtom/testing_examples/migrations/: 0001_initial.py
mtom/testing_examples/selectors/: schools.py
mtom/testing_examples/services/: rosters.py  school_courses.py  students.py
mtom/testing_examples/tests/: factories.py
mtom/testing_examples/tests/selectors/: test_school_list_school_courses.py
mtom/testing_examples/tests/services/: test_roster_create.py  test_roster_validate_period.py  test_student_create.py
mtom/users/: admin.py  apis.py  apps.py  filters.py  models.py  selectors.py  services.py
mtom/users/migrations/: 0001_initial.py  0002_user_uuid.py  0003_auto_20230303_2312.py
mtom/users/tests/services/: test_user_create.py
proxy/: BUILD
proxy/dev_server/: admin.py  api.py  models.py  selectors.py  services.py  tasks.py  urls.py  views.py
proxy/dev_server/migrations/: 0001_initial.py
proxy/dev_server/tests/: test_dev_server_services.py
